kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: flask-api-svc
spec:
    type: LoadBalancer
    selector:
    app: flask-api
    ports:
    - port: 5000
    targetPort: 5000
